# sigekria-news-analyzer

./: Cargo.toml  README.md
src/: index.html  lib.rs  main.rs
src/app/: mod.rs  routes.rs
src/app/auth/: auth_page.html  handlers.rs  login_page.html  register_page.html  routes.rs
src/app/core/: app_config.rs  authenticator.rs  error.rs  handlers.rs  http_client.rs  interfaces.rs  mod.rs  models.rs  renderer.rs  routes.rs
src/app/home/: analyze_result_component.html  analyze_result_error_component.html  analyze_search_component.html  history_drawer_component.html  home_page.html  routes.rs
src/assets/: error_page.html  scripts.js  styles.css  tailwind_config.css  template.html
