[package]
name = "warptest"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
warp = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12", features = ["json"] }
# reqwest-eventsource = "0.6.0"
# eventsource = "0.5.0"
handlebars = "6.0"

[dependencies.uuid]
version = "1.12.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
listenfd = "1.0"
